--- a/next-14/package.json
+++ b/next-14/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
+    "clsx": "^2.1.1",
+    "joi": "^17.13.3",
+    "mongoose": "^8.5.4",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "react-hook-form": "^7.53.0",
+    "react-toastify": "^10.0.5",
+    "swr": "^2.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
