--- a/next-14/package.json
+++ b/next-14/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "joi": "^17.13.3",
     "mongoose": "^8.5.4",
