--- a/next-14/package.json
+++ b/next-14/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8888",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8888",
     "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.5.4",
     "next": "14.2.5",
     "react": "^18",
@@ -21,9 +25,13 @@
     "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
+    "usehooks-ts": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
