--- a/next-14/package.json
+++ b/next-14/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "joi": "^17.13.3",
